--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ server:
   port : 8090
 spring:
     datasource:
-        url: jdbc:mysql://localhost:3306/spring_social?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+        url: jdbc:mysql://wp.crd7dpefg6ya.us-east-2.rds.amazonaws.com:3306/spring_social?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
         username: root
-        password: root
+        password: 52LmjX0ittqljFhXIpzi
 
     jpa:
         show-sql: true
